# DisKord

./: .gitignore  CHANGELOG.md  README.md  __init__.py  automod.py  client.py  cog.py  events.py  pdf_gen.py  pyproject.toml  requirements-dev.txt  requirements.txt  validation.py
pydisk/: api.py  components.py  embed.py  html_embed.py  i18n.py  middleware.py  smart.py  statemachine.py
pydisk/commands/: __init__.py
pydisk/core/: __init__.py  async_utils.py  gateway.py  rest.py
pydisk/models/: __init__.py
